<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label" />
    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <PreferenceCategory
        android:title="@string/pref_notification_group">
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_cars"
            android:title="@string/cars" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_restaurants"
            android:title="@string/restaurants" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_group_activities"
            android:title="@string/group_activities" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_sports_events"
            android:title="@string/sports_events" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_rentals"
            android:title="@string/rentals" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_education"
            android:title="@string/education" />
    </PreferenceCategory>
</PreferenceScreen>
